# python-project-lvl2

./: .gitignore  Makefile  README.md  TODO.md  gendiff.py  out.txt  pyproject.toml
.github/workflows/: myCI.yml
gen_diff/: main.py
gen_diff/formatter/: json_format.py  plain_format.py  stylish_format.py
gen_diff/parser/: parsing.py
gen_diff/scripts/: main.py
gen_diff/scripts/formatter/: json_format.py  plain_format.py  stylish_format.py
gen_diff/scripts/parser/: parsing.py
gen_diff/scripts/utils/: functions.py
gen_diff/utils/: functions.py
gendiff/: __init__.py
gendiff/parser/: parsing.py
tests/: test_gendiff.py  test_hexlet.py  test_hexlet_json.py  test_hexlet_yaml.py  test_utils.py
tests/fixtures/: file5.json  file6.json  file7.json  fixtures.py  output.txt
tests/fixtures/complicated/: file3.yaml  file4.yaml
tests/fixtures/hexlet_fixtures/: result_plain
