[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["dimaevan <dimaevan@gmail.com>"]
packages = [
    { include='gen_diff' },
]

[tool.poetry.scripts]
gendiff = "gen_diff.scripts.main:main"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
