[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "Find differences from 2  json or yaml files. "
authors = ["dimaevan <dimaevan@gmail.com>"]
packages = [
    { include='gendiff' },
]

[tool.poetry.scripts]
gendiff = "gendiff.generate_diff:main"

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
